src/test/deca/context/invalid/created/comparaisons-type-diff.deca
{
	int a = 3;
	float b = 2;
	a<b;
}